fixed home and impact page pngs not showing up

--- a/src/index.css
+++ b/src/index.css
@@ -453,7 +453,7 @@ nav {
     position: relative;
     height: 40vh;
     min-height: 300px;
-    background-image: linear-gradient(rgba(127, 175, 202, 0.7), rgba(123, 168, 143, 0.7)), url('/green park.png');
+    background-image: linear-gradient(rgba(127, 175, 202, 0.7), rgba(123, 168, 143, 0.7)), url('/green%20park.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
